tests/reference/asr-implicit_typing1-e105a73.stderr
semantic error: Variable 'x' is not declared
 --> tests/errors/implicit_typing1.f90:3:1
  |
3 | x = 1
  | ^ 'x' is undeclared
